cashback page is ready

--- a/public/OrderersTable.html
+++ b/public/OrderersTable.html
@@ -9,7 +9,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../src/scss/style.css" />
-    <title>Pulsuz Debet Kart Sifaris edenlerin siyahisi</title>
+    <title>Kart Sifariş edənlərin siyahısı</title>
   </head>
 
   <body>
