--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="../../src/scss/style.css" />
+    <link rel="stylesheet" href="../src/scss/style.css" />
     <title>Yelo Bank - Müasir Bank Xidmətləri</title>
   </head>
 
